[gd_scene load_steps=16 format=3 uid="uid://b35yprvwfqx1l"]

[ext_resource type="Texture2D" uid="uid://c4a1niq2y7we8" path="res://assets/icon.svg" id="1_iehek"]
[ext_resource type="Script" path="res://player/player.gd" id="1_iol46"]
[ext_resource type="Resource" uid="uid://dbejhsudfq7e1" path="res://player/movementData/baseMovement.tres" id="4_3kdex"]
[ext_resource type="Script" path="res://player/stateMachine/StateMachine.gd" id="4_nywrc"]
[ext_resource type="Script" path="res://player/stateMachine/Idle.gd" id="4_syt1c"]
[ext_resource type="Script" path="res://player/stateMachine/Run.gd" id="5_2xcmb"]
[ext_resource type="Script" path="res://player/stateMachine/Air.gd" id="6_uukb8"]
[ext_resource type="Script" path="res://player/stateMachine/GroundPound.gd" id="8_f0ll7"]
[ext_resource type="Script" path="res://player/stateMachine/WallSlide.gd" id="9_ymp57"]
[ext_resource type="Script" path="res://player/stateMachine/Roll.gd" id="10_0idnq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcaqm"]

[sub_resource type="Animation" id="Animation_1d5yu"]
resource_name = "GroundPoundInit"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/GroundPound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"move_ground_pound"
}]
}

[sub_resource type="Animation" id="Animation_28wjt"]
resource_name = "GroundPoundLand"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.051069, 0.140907, 0.220388, 0.299735),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(5.68434e-14, 4.76837e-07), Vector2(-1.78814e-07, 5), Vector2(0, 7.25), Vector2(0, 7.25), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.051069, 0.140907, 0.220388, 0.299735),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.15625, 0.15625), Vector2(0.21875, 0.078125), Vector2(0.28125, 0.0429688), Vector2(0.28125, 0.0429688), Vector2(0.156, 0.156)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StateMachine/GroundPound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.299735),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_ground_pound"
}]
}

[sub_resource type="Animation" id="Animation_4nlaf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.15625, 0.15625)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9.53674e-07, 9.53674e-07)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_571yh"]
_data = {
"GroundPoundInit": SubResource("Animation_1d5yu"),
"GroundPoundLand": SubResource("Animation_28wjt"),
"RESET": SubResource("Animation_4nlaf")
}

[node name="Player" type="CharacterBody2D"]
floor_block_on_wall = false
floor_snap_length = 3.0
script = ExtResource("1_iol46")
movement_data = ExtResource("4_3kdex")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, 9.53674e-07)
rotation = 6.28319
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("1_iehek")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tcaqm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_571yh")
}

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -50)
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="Timers" type="Node" parent="."]

[node name="JumpBuffer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="RollIdle" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("4_nywrc")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("air_state", "run_state", "roll_state")]
script = ExtResource("4_syt1c")
air_state = NodePath("../Air")
run_state = NodePath("../Run")
roll_state = NodePath("../Roll")

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "air_state", "roll_state")]
script = ExtResource("5_2xcmb")
idle_state = NodePath("../Idle")
air_state = NodePath("../Air")
roll_state = NodePath("../Roll")

[node name="Air" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "ground_pound_state", "wall_slide_state")]
script = ExtResource("6_uukb8")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
ground_pound_state = NodePath("../GroundPound")
wall_slide_state = NodePath("../WallSlide")

[node name="GroundPound" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "air_state")]
script = ExtResource("8_f0ll7")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
air_state = NodePath("../Air")

[node name="WallSlide" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "air_state", "ground_pound_state")]
script = ExtResource("9_ymp57")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
air_state = NodePath("../Air")
ground_pound_state = NodePath("../GroundPound")

[node name="Roll" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "air_state")]
script = ExtResource("10_0idnq")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
air_state = NodePath("../Air")

[node name="LeftInner" type="RayCast2D" parent="."]
position = Vector2(5, 0)
target_position = Vector2(0, -20)

[node name="LeftOuter" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, -20)

[node name="RightInner" type="RayCast2D" parent="."]
position = Vector2(-5, 0)
target_position = Vector2(0, -20)

[node name="RightOuter" type="RayCast2D" parent="."]
position = Vector2(-10, 0)
target_position = Vector2(0, -20)

[connection signal="timeout" from="Timers/RollIdle" to="StateMachine/Roll" method="_on_roll_idle_timeout"]
